--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-pandas==2.1.3
-numpy==1.24.3
-scikit-learn==1.3.2
-imbalanced-learn==0.11.0
-matplotlib==3.8.0
-seaborn==0.13.0
-jupyter==1.0.0
-shap==0.44.0
-xgboost==1.7.6
-lightgbm==4.1.0
-ipython==8.17.2
-notebook==7.0.6
+pandas
+numpy
+matplotlib==3.10.0
+seaborn
+scikit-learn
+imbalanced-learn
+jupyter
+aext-share-notebook
